<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.beedle.pocketreview.Activity.MainActivity">


    <LinearLayout
...


    </LinearLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/menuIcon"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/locationIcon"
            android:layout_width="70dp"
            android:layout_height="65dp"
            android:layout_marginTop="392dp"
            android:alpha="0.6"
            android:onClick="changePage"
            android:scaleX="1.5"
...
            android:src="@drawable/locationlogo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/currencyIcon"
            android:layout_width="70dp"
            android:layout_height="65dp"
            android:layout_marginTop="248dp"
            android:onClick="changePage"
            android:scaleX="1.3"
            android:scaleY="1.3"
...
            android:textColor="@color/Coral"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.204"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pocketIcon"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            app:layout_constraintHorizontal_bias="0.848"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currencyIcon" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:alpha="0.6"
            android:text="Location"
            android:textColor="@color/LightGrey"
...
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationIcon" />


        <android.support.v7.widget.Toolbar
            android:id="@+id/tbMain"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/RoyalBlue"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
...
        android:id="@+id/frameContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"></FrameLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:itemIconTint="@color/DarkCyan"
        app:itemTextColor="@color/DarkCyan"
...
