<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Wheat"
    tools:context="app.beedle.pocketreview.Activity.EditNoteActivity">

    <LinearLayout
...
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/contentDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearTitle">

...
            android:lineSpacingExtra="16dp"
            android:paddingLeft="20dp"
            android:text="Hotel Rent \nBreakFast"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/valueEditNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="0123456789.\n"
            android:inputType="textMultiLine|number"
            android:lineSpacingExtra="16dp"
            android:text="15\n2"
...
        android:onClick="shareClick"
        android:text="SHARE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/doneBtnEditNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="32dp"
        android:onClick="updateNote"
        android:text="Done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
...
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />


            <ImageButton
                android:id="@+id/deleteNote"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@android:drawable/ic_menu_delete"
                app:layout_constraintBottom_toBottomOf="parent"
...
        </android.support.constraint.ConstraintLayout>


    </LinearLayout>

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinner"
        android:layout_width="80dp"
        android:layout_height="19dp"
        android:layout_marginStart="304dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
...
