<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_pocket_tab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.beedle.pocketreview.Activity.PocketNoteActivity">

    <LinearLayout
        android:layout_width="match_parent"
...
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="64dp"
            android:scrollbars="vertical" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/tbPocket"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/LightSteelBlue"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
...
