<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_AddNote"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MistyRose"
    android:orientation="horizontal"
    tools:context="app.beedle.pocketreview.Activity.AddNoteActivity">

...

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tbAddNote"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/DarkCyan"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
...
                android:textSize="16dp" />

        </LinearLayout>


        <Button
            android:id="@+id/doneBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="32dp"
            android:text="Done"
            app:layout_constraintBottom_toBottomOf="parent"
...
